Sat Dec 22 13:59:14 GMT 2012  Colin Watson  <cjwatson@debian.org>

	Document default section list in manual pages (Debian bug #611007).

	* man/replace.sin.in: Substitute %sections%.
	* man/man1/man.man1 (DESCRIPTION): Fix misplaced comma.  Document
	  configured list of sections rather than simply saying "a
	  pre-defined order".
	  (ENVIRONMENT): Document default for $MANSECT.
	* man/man8/catman.man8 (ENVIRONMENT): Likewise.
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/*.po: Update.

Fri Dec 21 21:29:27 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* src/man.c (main): Use $MANLESS as the default for prompt_string if
	  the -r option was not used.
	  (setenv_less): Remove code to copy $MANLESS verbatim into $LESS.
	* man/man1/man.man1 (Controlling formatted output, ENVIRONMENT):
	  Describe new behaviour of $MANLESS.
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/*.po: Update.

Sun Dec 16 12:00:55 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* src/man.c (escape_less): Handle incompatible change to option
	  string escaping in less 456.  Reported by Vincent Lefevre.

Sat Dec 15 10:49:46 GMT 2012  Joe Hansen  <joedalton2@yahoo.dk>

	* man/po4a/po/da.po: Update from Translation Project.

Sat Nov 24 22:42:01 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/da.po: New from Translation Project (thanks, Joe
	  Hansen).
	* configure.ac (AC_CONFIG_FILES): Add man/da/Makefile.
	* man/LINGUAS.po4a: Add da.
	* man/Makefile.am (DIST_SUBDIRS): Add da.
	* man/da/Makefile.am, man/da/translator.add: New files.
	* man/po4a/Makefile.am (POFILES): Add po/da.po.
	* man/po4a/po4a.cfg (po4a_langs): Add da.
	* man/THANKS: Credit Joe Hansen with man/da as well as da.po.
	* .bzrignore: Add man/da/man1, man/da/man5, and man/da/man8.

Mon Sep 17 23:22:48 BST 2012  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.3.

Mon Sep 17 23:20:19 BST 2012  Colin Watson  <cjwatson@debian.org>

	Stop distributing .tar.gz, as promised in the release notes for
	2.6.2.
