@@ -1,3 +1,7 @@
+Mon Jan 21 11:04:44 GMT 2013  Colin Watson  <cjwatson@debian.org>
+
+	Upgrade to Libtool 2.4.2-1.2 (from Debian).
+
 Sat Dec 22 13:59:14 GMT 2012  Colin Watson  <cjwatson@debian.org>
 
 	Document default section list in manual pages (Debian bug #611007).
